change PR title-lint to pull correct verision

--- a/.github/workflows/pr-title-lint.yml
+++ b/.github/workflows/pr-title-lint.yml
@@ -27,7 +27,10 @@ jobs:
       - name: Install commitlint
         run: npm install commitlint @commitlint/config-conventional
 
+      - name: Install the shared config
+        run: npm install git://github.com/taptapsend/commitlint-config.git  
+
       - name: Lint the PR title
         run: |
           echo "${{ github.event.pull_request.title }}" |\
-            npx commitlint --config ./.commitlint.config.js
+            npx commitlint --config ./node_modules/commitlint-config/.commitlint.config.js
