--- a/.github/workflows/pr-title-lint.yml
+++ b/.github/workflows/pr-title-lint.yml
@@ -30,6 +30,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: title-and-description
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Install Node JS
         uses: actions/setup-node@v2
 
